I chnaged my bio under the profile to only student in CPE major

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Varshitha Kodela"
   pronouns         : "she/her"  
-  bio              : "Undergraduate Student in Computer Engineering minoring in Computer Science and Political Science."
+  bio              : "Undergraduate Student in Computer Engineering."
   location         : "Virginia, USA"
   employer         : "Virginia Tech University"
   uri              : https://vk0804.github.io
